--- a/index.html
+++ b/index.html
@@ -407,7 +407,7 @@
                     >
                         <div class="service-descb">
                             <img
-                                style="height: 600px; object-fit: cover"
+                                style="object-fit: cover"
                                 src="img/news/news-10.jpg"
                                 class="img-fluid"
                                 alt="..."
@@ -429,7 +429,7 @@
                     >
                         <div class="service-descb">
                             <img
-                                style="height: 600px; object-fit: cover"
+                                style="object-fit: cover"
                                 src="img/news/news-2.jpg"
                                 class="img-fluid"
                                 alt="..."
